--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-midnight
-title: Mauro Martins Jr - Dev BackEnd
+title: Mauro Martins Jr - Líder Técnico e desenvolvedor BackEnd
